# LICP_TEXT

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js  辅助记录.txt
src/ICP_Ledger/: ledger.wasm
src/LICPICRC1/: ic-icrc1-ledger.wasm
src/LICP_backend/: Cargo.toml  LICP_backend.did
src/LICP_backend/src/: lib.rs
src/LICP_backend/src/clients/: licpicrc1.rs  mod.rs
src/LICP_backend/src/common/: types.rs
src/LICP_frontend/src/: index.html  index.js
