[package]
name = "LICP_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
async-trait = "0.1.53"
serde = "1.0"
serde_bytes = "0.11"
ic-ledger-types = "0.3.0"
hex="0.4"