[package]
name = "LICP_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex="0.4"
serde = "1"
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
async-trait = "0.1.53"
serde_bytes = "0.11"
ic-ledger-types = "0.3.0"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
getrandom = { version = "0.2", features = ["custom"] }